--- a/app/views/invitation_mailer/inform_inviter.html.erb
+++ b/app/views/invitation_mailer/inform_inviter.html.erb
@@ -1,11 +1,16 @@
-<p><%= t "hi" %> <%= @inviter.name %> , </p>
+<%= render 'shared_mail/header' %>
 
-<p><%= @invited_user.name %> <%= t ".line1" %></p>
+	<p><%= t "hi" %> <%= @inviter.name %> , </p>
 
-<p><%= t ".line2" %></p>
+	<p><%= @invited_user.name %> <%= t ".line1" %></p>
 
-<h3><%= link_to t(".go_to_profile", name: @invited_user.name), @invited_user_profile_url %></h3>
+	<p><%= t ".line2" %></p>
 
-<h3><%= link_to t(".go_to_profile", name: @inviter.name), @inviter_profile_url %></h3>
+	<h3><%= link_to t(".go_to_profile", name: @invited_user.name), @invited_user_profile_url %></h3>
 
-<p><%= link_to t("sign"), root_url(locale: locale) %></p>
+	<h3><%= link_to t(".go_to_profile", name: @inviter.name), @inviter_profile_url %></h3>
+
+	<p><%= link_to t("sign"), root_url(locale: locale) %></p>
+
+<%= render 'shared_mail/footer' %>
+	
