--- a/app/views/invitation_mailer/invite.html.erb
+++ b/app/views/invitation_mailer/invite.html.erb
@@ -1,13 +1,21 @@
-<p><%= t 'hi' %>, </p>
+<%= render 'shared_mail/header' %>
+	<p><%= t 'hi' %>, </p>
 
-<p><%= t('.line1', inviter: @inviter.name) %></p>
+	<p><%= link_to @inviter.name, @inviter_profile_url %>
 
-<% @accept_invite_url = url_for(controller: 'invitations', action:'invite_acceptation', inviter: @inviter.slug,	 locale: locale, host: @host)  %>
+		<%= t('.line1') %></p>
 
-<table>
-	<tbody>
-		<tr>
-			<th class="buttons" style="text-align: left;width: 234px;"><h3><%= link_to t(".accept_invite"), @accept_invite_url %></h3></th>
-		</tr>
-	</tbody>
-</table>
+	<% @accept_invite_url = url_for(controller: 'invitations', action:'invite_acceptation', inviter: @inviter.slug,	 locale: locale, host: @host)  %>
+		<h3><%= link_to t(".accept_invite"), @accept_invite_url, {:style => "
+			background-color: #fbd921;
+			text-decoration: none;
+			padding: 8px 17px;
+			color: #918B9B;
+			border-radius: 7px;
+			border: 1px solid #E7C407;
+			margin: 9px 108px;
+			float: #{@lang_other_side}"} %>
+		</h3>
+
+<%= render 'shared_mail/footer' %>
+
