--- a/app/views/user_mailer/booking_request_to_driver.html.erb
+++ b/app/views/user_mailer/booking_request_to_driver.html.erb
@@ -1,3 +1,8 @@
+<style>
+	th {
+		padding: 0px 25px;
+	}
+</style>
 <%= render 'shared_mail/header' %>
 
 	<%= t 'hi' %> <%= @driver.name %>, <br> <br>
@@ -8,8 +13,8 @@
 		<tbody>
 		
 			<tr>
-				<th style="text-align: left;width: 234px;"><%= t 'name_of_passenger' %></th>
-				<td style="text-align: left;width: 234px;">
+				<th style="text-align: <%= @lang_side %>;width: 234px;"><%= t 'name_of_passenger' %></th>
+				<td style="text-align: <%= @lang_side %>;width: 234px;">
 					<%= link_to @passenger.name, url_for(	host: @host,
 																				controller: 'profiles', 
 																				action: 'show', 
@@ -19,26 +24,26 @@
 			</tr>
 
 			<tr>
-				<th style="text-align: left;width: 234px;"><%= t 'number_of_requested_seats' %></th>
-				<td style="text-align: left;width: 234px;"><%= @number_of_requested_seats %>	</td>
+				<th style="text-align: <%= @lang_side %>;width: 234px;"><%= t 'number_of_requested_seats' %></th>
+				<td style="text-align: <%= @lang_side %>;width: 234px;"><%= @number_of_requested_seats %>	</td>
 			</tr>
 
 			<tr>
-				<th style="text-align: left;width: 234px;"><%= t 'email' %></th>
-				<td style="text-align: left;width: 234px;"><%= @passenger.email %>	</td>
+				<th style="text-align: <%= @lang_side %>;width: 234px;"><%= t 'email' %></th>
+				<td style="text-align: <%= @lang_side %>;width: 234px;"><%= @passenger.email %>	</td>
 			</tr>
 
 			<% unless @passenger.tel.blank?  %>
 				<tr>
-					<th style="text-align: left;width: 234px;"><%= t 'tel' %></th>
-					<td style="text-align: left;width: 234px;"><%= @passenger.tel %>	</td>
+					<th style="text-align: <%= @lang_side %>;width: 234px;"><%= t 'tel' %></th>
+					<td style="text-align: <%= @lang_side %>;width: 234px;"><%= @passenger.tel %>	</td>
 				</tr>			
 			<% end %>
 			
 			<% unless @passenger.mobile.blank?  %>
 				<tr>
-					<th style="text-align: left;width: 234px;"><%= t 'mobile' %></th>
-					<td style="text-align: left;width: 234px;"><%= @passenger.mobile %>	</td>
+					<th style="text-align: <%= @lang_side %>;width: 234px;"><%= t 'mobile' %></th>
+					<td style="text-align: <%= @lang_side %>;width: 234px;"><%= @passenger.mobile %>	</td>
 				</tr>
 			<% end %>
 
