--- a/app/views/user_mailer/booking_positive_response_to_passenger.html.erb
+++ b/app/views/user_mailer/booking_positive_response_to_passenger.html.erb
@@ -1,14 +1,15 @@
+<%= render 'shared_mail/style' %>
+<%= render 'user_mailer/style' %>
 <%= render 'shared_mail/header' %>
 	<%= t 'hi' %> <%= @passenger.name %>, <br> <br>
 	<%= t '.line1' %> <br>
 	<br>
 	<h3><%= t '.driver_details' %></h3>
-	<%= @lang_side %>
 	<table>
 		<tbody> 
 			<tr>
-				<th style="text-align: <%= @lang_side %>;width: 234px;"><%= t 'name_of_driver' %></th>
-				<td style="text-align: <%= @lang_side %>;width: 234px;">
+				<th><%= t 'name_of_driver' %></th>
+				<td>
 					<%= link_to @driver.name, url_for(	host: @host,
 																				controller: 'profiles', 
 																				action: 'show', 
@@ -16,12 +17,12 @@
 																				locale: 'fa') %>
 				</td>
 			</tr>
-				<th style="text-align: <%= @lang_side %>;width: 234px;"><%= t 'contact_number' %></th>
-				<td style="text-align: <%= @lang_side %>;width: 234px;"><%= @driver.tel %>, <%= @driver.mobile %>	</td>
+				<th><%= t 'contact_number' %></th>
+				<td><%= @driver.tel %>, <%= @driver.mobile %>	</td>
 			</tr>
 			</tr>
-				<th style="text-align: <%= @lang_side %>;width: 234px;"><%= t 'email' %></th>
-				<td style="text-align: <%= @lang_side %>;width: 234px;"><%= @driver.email %></td>
+				<th><%= t 'email' %></th>
+				<td><%= @driver.email %></td>
 			</tr>
 		</tbody>
 	</table>
@@ -31,5 +32,5 @@
 	<%# accept = url_for(controller: 'bookings', action:'show', id: @booking.id,	 locale: 'fa', host: @host)  %>
 	<% @subtrip_url = url_for(controller: 'subtrips', action:'show', id: @subtrip.id,	 locale: 'fa', host: @host)  %>
 
-	<h3><%= link_to t(".go_to_subtrip"), @subtrip_url %></h3>
+	<%= link_to t(".go_to_subtrip"), @subtrip_url, {class: "button"}  %>
 <%= render 'shared_mail/footer' %>
