--- a/app/views/user_mailer/booking_request_to_driver.html.erb
+++ b/app/views/user_mailer/booking_request_to_driver.html.erb
@@ -1,8 +1,5 @@
-<style>
-	th {
-		padding: 0px 25px;
-	}
-</style>
+<%= render 'shared_mail/style' %>
+<%= render 'user_mailer/style' %>
 <%= render 'shared_mail/header' %>
 
 	<%= t 'hi' %> <%= @driver.name %>, <br> <br>
@@ -13,8 +10,8 @@
 		<tbody>
 		
 			<tr>
-				<th style="text-align: <%= @lang_side %>;width: 234px;"><%= t 'name_of_passenger' %></th>
-				<td style="text-align: <%= @lang_side %>;width: 234px;">
+				<th><%= t 'name_of_passenger' %></th>
+				<td>
 					<%= link_to @passenger.name, url_for(	host: @host,
 																				controller: 'profiles', 
 																				action: 'show', 
@@ -24,26 +21,26 @@
 			</tr>
 
 			<tr>
-				<th style="text-align: <%= @lang_side %>;width: 234px;"><%= t 'number_of_requested_seats' %></th>
-				<td style="text-align: <%= @lang_side %>;width: 234px;"><%= @number_of_requested_seats %>	</td>
+				<th><%= t 'number_of_requested_seats' %></th>
+				<td><%= @number_of_requested_seats %>	</td>
 			</tr>
 
 			<tr>
-				<th style="text-align: <%= @lang_side %>;width: 234px;"><%= t 'email' %></th>
-				<td style="text-align: <%= @lang_side %>;width: 234px;"><%= @passenger.email %>	</td>
+				<th><%= t 'email' %></th>
+				<td><%= @passenger.email %>	</td>
 			</tr>
 
 			<% unless @passenger.tel.blank?  %>
 				<tr>
-					<th style="text-align: <%= @lang_side %>;width: 234px;"><%= t 'tel' %></th>
-					<td style="text-align: <%= @lang_side %>;width: 234px;"><%= @passenger.tel %>	</td>
+					<th><%= t 'tel' %></th>
+					<td><%= @passenger.tel %>	</td>
 				</tr>			
 			<% end %>
 			
 			<% unless @passenger.mobile.blank?  %>
 				<tr>
-					<th style="text-align: <%= @lang_side %>;width: 234px;"><%= t 'mobile' %></th>
-					<td style="text-align: <%= @lang_side %>;width: 234px;"><%= @passenger.mobile %>	</td>
+					<th><%= t 'mobile' %></th>
+					<td><%= @passenger.mobile %>	</td>
 				</tr>
 			<% end %>
 
@@ -63,8 +60,8 @@
 	<table>
 		<tbody>
 			<tr>
-				<th class="buttons" style="text-align: left;width: 234px;"><h3><%= link_to t("accept"), @accept_url %></h3></th>
-				<th class="buttons" style="text-align: left;width: 234px;"><h3><%= link_to t("reject"), @reject_url %></h3></th>
+				<th class="buttons" style=""><%= link_to t("accept"), @accept_url, {class: "button"} %></th>
+				<th class="buttons" style=""><%= link_to t("reject"), @reject_url, {class: "button"} %></th>
 			</tr>
 		</tbody>
 	</table>
