--- a/app/views/user_mailer/signup_inform_admin.html.erb
+++ b/app/views/user_mailer/signup_inform_admin.html.erb
@@ -4,11 +4,11 @@
 <table>
 	<tbody>
 		<tr>
-			<th>ID</th>
+			<th>آی دی: </th>
 			<td><%= @user.id %></td>
 		</tr>
 		<tr>
-			<th>Name</th>
+			<th>نام: </th>
 			<td><%= link_to @user.name, url_for(	
 							host: @host,
 							controller: 'profiles', 
@@ -18,11 +18,11 @@
 			</td>
 		</tr>
 		<tr>
-			<th>Time</th>
+			<th>زمان ثبت نام: </th>
 			<td><%= @jalali_time %></td>
 		</tr>
 		<tr>
-			<th>Date</th>
+			<th>تاریخ ثبت نام: </th>
 			<td>
 				<%= @jalali_day %> ,
 				<%= @jalali_month %>,
@@ -32,7 +32,7 @@
 	</tbody>
 </table>
 	
-<h4>Inviter</h4>
+<h4>دعوت کننده ها: </h4>
 <ol>
 	<% while	@user.inviter %>
 		<li>
