--- a/app/views/application/_popup_signin.html.erb
+++ b/app/views/application/_popup_signin.html.erb
@@ -1,4 +1,4 @@
-<li  class="dropdown">
+<li id="popup_signin" class="dropdown">
   <a id="popup_signin_button" data-toggle="dropdown" class="dropdown-toggle" href="#"><%= t 'devise.sessions.form.sign_in' %><b class="caret"></b></a>
   <ul id="signin-dropdown" class="dropdown-menu">
     <li>
@@ -26,9 +26,15 @@
           <%= submit_tag t('devise.sessions.form.sign_in'), class: "btn btn-warning btn-block" %>
         </div>      
           <%= link_to t('devise.sessions.form.sign_up'), new_registration_path(resource_name) %>
-  <%= link_to t('devise.sessions.form.forget_password'), new_password_path(resource_name), class: "btn btn-link" %>
+          <%= link_to t('devise.sessions.form.forget_password'), new_password_path(resource_name), class: "btn btn-link" %>
                 
       <% end %> <!--END FORM -->
+    </li>
+    <li class="divider"></li>
+
+    <li>
+      <%= link_to t(".sign_in_with_facebook"), user_omniauth_authorize_path(:facebook), class: "facebook_link" %>
+      <span id="facebook_icon" ></span>
     </li>
   </ul>
 </li>
