--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -6,11 +6,16 @@
 			<% end %>
 			<%= render partial: 'trip_search' %>	
 	  </div>
+
 		<% if @spacial_events.any? %>
 		  <div id="spacial_events">
 				<%= render 'spacial_events'%>	
 			</div>			
 		<% end %>
+
+	  <div id="spacial_events">
+			<%= render 'facebook_signin'%>	
+		</div>			
 	</div>	
 
 	<div class="col-md-6">
