add sign in with facebook to sign in and sign up pages

--- a/app/assets/stylesheets/user_session.css.scss
+++ b/app/assets/stylesheets/user_session.css.scss
@@ -1,51 +1,77 @@
 // Place all the styles related to the vehicles controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+  
+#users_sign_up, #users_sign_in{
+  padding: 40px;
+  #facebook_frame{
+    padding: 40px;
+    .facebook_link{
+      margin: 0;
+      width: 61%;
+      font-weight: bold;
+      color: #fff;
+      padding: 6px 13px 7px 0;
+      background: #486299 url("https://s3-eu-west-1.amazonaws.com/hamsafaryab.production/static_files/images/icons.png") no-repeat;
+      background-position-y: -79px;
+      background-position-x: 2px;
+      margin-right: 19px;
+      margin-left: 19px;
+      border-radius: 8px;
+      text-align: right;
+    }
+  } 
+  #sign_up{
+    border-right: 1px solid #CFCFCF;
+    .form-sign-in-up {
+      max-width: 330px;
+      padding: 15px;
+      margin: 0 auto;
+      .form-sign-in-up-heading {
+        margin-bottom: 10px;
+      }
+      .form-control {
+        position: relative;
+        font-size: 16px;
+        height: auto;
+        padding: 10px;
+        -webkit-box-sizing: border-box;
+           -moz-box-sizing: border-box;
+                box-sizing: border-box;
+      }
+      .form-control:focus {
+        z-index: 2;
+      }
+      input[type="text"] {
+        margin-bottom: -1px;
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+      }
+      input[type="password"] {
+        margin-bottom: 10px;
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+      }
+      .field_with_errors{
+        position: relative;
+        span{
+          position: absolute;
+          right: 311px;
+          width: 300px;
+          top: 12px;
+          font-size: .9em;
+        } 
+      }
+    }  // .form-sign-in-up
+  }  //#sign_up
+} //#users_sign_up{
 
-.form-sign-in-up {
-  max-width: 330px;
-  padding: 15px;
-  margin: 0 auto;
-}
-.form-sign-in-up .form-sign-in-up-heading,
-.form-sign-in-up .checkbox {
-  margin-bottom: 10px;
-}
-.form-sign-in-up .checkbox {
-  font-weight: normal;
-}
-.form-sign-in-up .form-control {
-  position: relative;
-  font-size: 16px;
-  height: auto;
-  padding: 10px;
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
-}
-.form-sign-in-up .form-control:focus {
-  z-index: 2;
-}
-.form-sign-in-up input[type="text"] {
-  margin-bottom: -1px;
-  border-bottom-left-radius: 0;
-  border-bottom-right-radius: 0;
-}
-.form-sign-in-up input[type="password"] {
-  margin-bottom: 10px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
-}
-
-.form-sign-in-up .field_with_errors{
-	position: relative;
-	span{
-		position: absolute;
-		right: 311px;
-		width: 300px;
-		top: 12px;
-		font-size: .9em;
-	}	
+#users_sign_in{
+  #sign_in_form{
+    padding: 63px;
+    padding-top: 37px;
+    border-right: 1px solid #D5D5D5;
+  }
 }
 
 .users-list{
