--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,1 +1,10 @@
-<%= render 'users/new/form' %>
+<div id="users_sign_up">
+	<div id="facebook_frame" class="frame col-sm-6">
+		<%= render 'shared/facebook_sign_in' %>		
+	</div>
+
+	<div id="sign_up" class="col-sm-6">
+		<%= render 'users/new/form' %>	
+	</div>
+
+</div>
