fix css problem in facebook bottuns

--- a/app/assets/stylesheets/homes.css.scss
+++ b/app/assets/stylesheets/homes.css.scss
@@ -80,6 +80,7 @@ $green: #b5c023;
 			background: #486299 url("https://s3-eu-west-1.amazonaws.com/hamsafaryab.production/static_files/images/icons.png") no-repeat;
 			background-position-y: -79px;
 			background-position-x: 2px;
+			background-position: 2px -79px;
 			margin-right: 19px;
 			margin-left: 19px;
 			border-radius: 8px;
