--- a/app/assets/stylesheets/navbar.css.scss
+++ b/app/assets/stylesheets/navbar.css.scss
@@ -67,6 +67,7 @@
 		background: #486299 url("https://s3-eu-west-1.amazonaws.com/hamsafaryab.production/static_files/images/icons.png") no-repeat;
 		background-position-y: -80px;
 		background-position-x: 1px;
+		background-position: 1px -80px;
 		margin-right: -13px;
 		margin-left: -14px;
 		border-radius: 8px;
