--- a/app/assets/stylesheets/user_session.css.scss
+++ b/app/assets/stylesheets/user_session.css.scss
@@ -15,6 +15,7 @@
       background: #486299 url("https://s3-eu-west-1.amazonaws.com/hamsafaryab.production/static_files/images/icons.png") no-repeat;
       background-position-y: -79px;
       background-position-x: 2px;
+      background-position: 2px -79px;
       margin-right: 19px;
       margin-left: 19px;
       border-radius: 8px;
