add view profile bottun to driver overview in subtrip

--- a/app/assets/stylesheets/subtrips.css.scss
+++ b/app/assets/stylesheets/subtrips.css.scss
@@ -17,7 +17,11 @@
 		.panel-heading{
 			padding: 0;
 			h2{
-				padding: 10px 21px;
+				padding: 10px 21px 0px 21px;
+				margin-bottom: 4px;
+			}
+			.view_profile{
+				margin: 0px 53px;
 			}
 		}
 		.stars{
