--- a/app/views/subtrips/show/_driver_overview.html.erb
+++ b/app/views/subtrips/show/_driver_overview.html.erb
@@ -3,6 +3,8 @@
 	  <div class="panel-heading">
 	  	<%= link_to(gravatar(@subtrip.trip.driver, 90, "img-responsive img-thumbnail pull-#{lang_other_side}",:square), profile_url(@subtrip.trip.driver) )%>
 	  	<h2> <%=t  '.overview'  %> </h2>
+		  <%= link_to t(".view_profile"), profile_url(@subtrip.trip.driver), class: "view_profile" %>
+
 	  </div>
 		<div class="panel-body">
 			<div class="meta">
