--- a/app/views/subtrips/show/_subtrip_overview.html.erb
+++ b/app/views/subtrips/show/_subtrip_overview.html.erb
@@ -37,7 +37,7 @@
 		  	<tr>
 		  		<th><%= t 'date_time'  %></th>
 		  		<th><%= t 'mydate'  %></th>
-		  		<td><%= jalali_date(@subtrip.date_time) %></td>
+		  		<td><%= apropriate_date(@subtrip) %></td>
 		  	</tr>
 
 		  	<tr>
