--- a/app/views/trips/_subtrip_fields.html.erb
+++ b/app/views/trips/_subtrip_fields.html.erb
@@ -6,9 +6,14 @@
       <%= t('.on_at') %>  
     </div> 
     <div class="col-sm-6">
-      <%= f.select :jday, options_for_day %> 
-      <%= f.select :jmonth, options_for_month %>
-      <%= f.select :jyear, options_for_year %> 
+      <% if session[:date_format] == 'shamsi' %>
+        <%= f.select :jday, options_for_day %> 
+        <%= f.select :jmonth, options_for_month %>
+        <%= f.select :jyear, options_for_year %>         
+      <% else %>
+        <%= f.date_select :date_time, {:prompt => { day: Date.today.day+2, :month => (l DateTime.now ,format: :only_month) , :year => Date.today.year }}, {:class => 'date-select'}  %>
+      <% end %>
+
     </div>
 
     <div class="col-sm-3">
