--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -1,8 +1,7 @@
-<h1>sdf</h1>
 <div id="trip_show" class="">
 	<div class="col-md-8">
 		<div class="panel panel-default">
-			<%= render partial: 'trips/show_edit/head', locals: {user: @trip.driver} %>
+  		<%= render partial: 'trips/shared/head', locals:{stage: 5} %>
 			<%= render 'trips/show_edit/trip_summary' %>
   		<%= render 'trips/show_edit/form_show' %>
   		<%#= render 'comments/comments' %>
