--- a/app/views/trips/edit.html.erb
+++ b/app/views/trips/edit.html.erb
@@ -1,8 +1,8 @@
 <div id="trip_edit" class="">
 	<div class="col-md-8">
 		<div class="panel panel-default">
-			<%= render partial: 'trips/show_edit/head', locals: {user: @trip.driver} %>
-			<%= error_messages_for(@trip) %>
+  		<%= render partial: 'trips/shared/head', locals:{stage: 4} %>
+			<%#= error_messages_for(@trip) %>
 			<%= render 'trips/show_edit/trip_summary' %>
 			<%= render 'trips/show_edit/form_edit' %>
 		</div>
