--- a/app/views/trips/show_edit/_form_show.html.erb
+++ b/app/views/trips/show_edit/_form_show.html.erb
@@ -2,10 +2,8 @@
   <%= simple_form_for(@trip,
     html: { method: :put, class: 'form-horizontal' } ) do |f| %>
 
-    <%= f.error_notification %>
-
     <%= f.simple_fields_for :subtrips do |b| %>
-        <% next if b.object.origin == b.object.destination %>
+        <% next if b.object.origin.downcase == b.object.destination.downcase %>
       	<%= render 'trips/show_edit/subtrip_fields_show', f: b %>
     <% end %>
     
