--- a/app/views/trips/show_edit/_trip_summary.html.erb
+++ b/app/views/trips/show_edit/_trip_summary.html.erb
@@ -13,7 +13,7 @@
 					<th></th>
 					<th><%= t 'city' %></th>
 					<th><%= t 'at' %></th>
-					<th><%= t 'trips.subtrip_fields.on' %></th>
+					<th><%= t 'mydate' %></th>
 				</tr>
 			</thead>
 			<tbody>
@@ -22,7 +22,7 @@
 					<td><%= @trip.first_city.origin %></td>
 					<td><%= @trip.first_city.date_time.to_s(:time) %></td>
 					<td>
-						<%= @trip.first_city.jyear %>-<%= @trip.first_city.jmonth %>-<%= @trip.first_city.jday %>
+						<%= apropriate_date @trip.first_city %>
 					</td>
 				</tr>
 
@@ -32,7 +32,7 @@
 						<td><%= c.origin%></td>
 						<td><%= c.date_time.to_s(:time) %></td>
 					<td>
-						<%= c.jyear %>-<%= c.jmonth %>-<%= c.jday %>
+						<%= apropriate_date c %>
 					</td>
 					</tr>
 				<% end %>
@@ -42,7 +42,7 @@
 					<td><%= @trip.last_city.destination %></td>
 					<td><%= @trip.subtrips.last.date_time.to_s(:time) %></td>
 					<td>
-						<%= @trip.subtrips.last.jyear %>-<%= @trip.subtrips.last.jmonth %>-<%= @trip.subtrips.last.jday %>
+						<%= apropriate_date @trip.subtrips.last %>
 					</td>
 				</tr>
 			</tbody>
