fix bug. give ability to user for enter to select_date_format page and then trip/new

--- a/app/views/dashboards/_trip_actions.html.erb
+++ b/app/views/dashboards/_trip_actions.html.erb
@@ -11,7 +11,7 @@
 			  	<%= link_to t('.search_trips'), search_search_subtrips_path, class: "btn btn-warning btn-lg btn-block" %>
 				</div>		
 			  <div class="col-xs-6">
-					<%= link_to t('.register_trip'), new_trip_path , class: "btn btn-warning btn-lg btn-block" %>			  
+					<%= link_to t('.register_trip'), trips_select_date_format_path , class: "btn btn-warning btn-lg btn-block" %>			  
 				</div>						
 			</div>
 
