--- a/app/views/homes/_trip_insert.html.erb
+++ b/app/views/homes/_trip_insert.html.erb
@@ -19,7 +19,7 @@
 
 		<div class="row">
 		  <div class="col-sm-6 col-sm-offset-6">
-				<%= link_to t('.register'), new_trip_path , class: "btn btn-warning btn-lg btn-block" %>
+				<%= link_to t('.register'), trips_select_date_format_path , class: "btn btn-warning btn-lg btn-block" %>
 			</div>				
 		</div>	
 
