--- a/app/views/user_mailer/_style.html.erb
+++ b/app/views/user_mailer/_style.html.erb
@@ -4,5 +4,21 @@
 		width: 234px;
 		text-align: <%= @lang_side %>;
 	}
+	
+	#following_inform	#head{
+			width: 523px;
+	}
+	#following_inform	#head .gravatar{
+		margin: 0 auto;
+		display: block;
+		border-radius: 4px;
+		border: 1px solid #E7E7E7;
+		padding: 1px;
+	}
+
+	#following_inform	td{
+		text-align: center;
+		padding-top: 19px;	
+	}
 
 </style>
