add helper to subtrip to indicate full subtrips in search result

--- a/app/views/subtrips/_subtrip_search_raw.html.erb
+++ b/app/views/subtrips/_subtrip_search_raw.html.erb
@@ -1,6 +1,5 @@
 <a href="<%= subtrip_path(subtrip.id) %>" >
-	<div class="search_subtrips_raw row">
-
+	<div style="<%= full_style subtrip %>" class="search_subtrips_raw row ">
 		<div class="user-info col-xs-4">
 			<div class="gravatar">
 				<%= gravatar(subtrip.trip.driver, 72, "img-thumbnail") %>				
