--- a/app/views/shouts/_shout.html.erb
+++ b/app/views/shouts/_shout.html.erb
@@ -1,16 +1,23 @@
-<div class="panel panel-default shout">
-  <div class="panel-body">
-		<%= div_for	shout do %> 
-			<%= link_to gravatar(shout.user), profile_url(shout.user) %>
-			<%= link_to shout.user.name, profile_url(shout.user) %>
-			<%= render partial: 'shouts/shout/action_nav', locals:{shout: shout} %>
-			<div class="content">
-				<%= render shout.try(:content) %>
-				<span class="meta">
-					<span class="text-muted"><%= time_ago_in_words(shout.created_at) %> <%=t("ago")  %></span>
-					<%# if can? :destroy, shout.content %>					
-				</span>	
-			</div> 
-		<% end %> <!-- div_for	shout  -->
+<div id="shoutes">
+	<div class="panel panel-default shout">
+	  <div class="panel-body">
+			<%= div_for	shout do %> 
+				<%= link_to gravatar(shout.user), profile_url(shout.user) %>
+				<%= link_to shout.user.name, profile_url(shout.user) %>
+				<%= render partial: 'shouts/shout/action_nav', locals:{shout: shout} %>
+				<div class="content">
+					<%= render shout.try(:content) %>
+					<span class="meta">
+						<span class="text-muted"><%= time_ago_in_words(shout.created_at) %> <%=t("ago")  %></span>
+						<%# if can? :destroy, shout.content %>					
+					</span>	
+				</div> 
+			<% end %> <!-- div_for	shout  -->
+
+	  	<div class="panel-body">
+	  		<%= render partial: 'comments/form', locals: {commentable: shout.content, comment: Comment.new} %>
+			  <%= render partial: 'comments/comments', locals: {comments: shout.content.comments} %>
+	  	</div>
+		</div>
 	</div>
 </div>
