--- a/app/views/currencies/_form.html.erb
+++ b/app/views/currencies/_form.html.erb
@@ -4,6 +4,12 @@
   <div class="form-inputs">
     <%= f.input :name %>
   </div>
+  <div class="form-inputs">
+    <%= f.input :unit_price %>
+  </div>
+  <div class="form-inputs">
+    <%= f.input :price_step %>
+  </div>
 
   <div class="form-actions">
     <%= f.button :submit %>
