--- a/app/views/currencies/index.html.erb
+++ b/app/views/currencies/index.html.erb
@@ -4,8 +4,8 @@
   <thead>
     <tr>
       <th>Name</th>
-      <th></th>
-      <th></th>
+      <th>unit_price</th>
+      <th>price_step</th>
       <th></th>
     </tr>
   </thead>
@@ -14,6 +14,8 @@
     <% @currencies.each do |currency| %>
       <tr>
         <td><%= currency.name %></td>
+        <td><%= currency.unit_price %></td>
+        <td><%= currency.price_step %></td>
         <td><%= link_to 'Show', currency %></td>
         <td><%= link_to 'Edit', edit_currency_path(currency) %></td>
         <td><%= link_to 'Destroy', currency, method: :delete, data: { confirm: 'Are you sure?' } %></td>
