--- a/app/views/currencies/show.html.erb
+++ b/app/views/currencies/show.html.erb
@@ -4,6 +4,16 @@
   <strong>Name:</strong>
   <%= @currency.name %>
 </p>
+<p>
+  <strong>unit_price:</strong>
+  <%= @currency.unit_price %>
+	
+</p>
 
+<p>
+  <strong>price_step:</strong>
+  <%= @currency.price_step %>
+	
+</p>
 <%= link_to 'Edit', edit_currency_path(@currency) %> |
 <%= link_to 'Back', currencies_path %>
