--- a/app/views/profiles/show/_user_overview.html.erb
+++ b/app/views/profiles/show/_user_overview.html.erb
@@ -13,7 +13,7 @@
 
 			<% if current_user %>
 				<%=  user_form_control_static t(".last_activity"), resent_activity(@profile.user, "activity"),"col-xs-5","col-xs-7" %>
-				<%=  user_form_control_static t(".last_login_location"), @profile.user.last_login_location,"col-xs-5","col-xs-7" %>
+				<%#=  user_form_control_static t(".last_login_location"), @profile.user.last_login_location,"col-xs-5","col-xs-7" %>
 				<%=  user_form_control_static t(".trips_count"), @trips_count,"col-xs-5","col-xs-7" %>
 				<%=  user_form_control_static t(".bookings_count"), @bookings_count,"col-xs-5","col-xs-7" %>
 				<%=  user_form_control_static t(".trip_canceled_count"), @trip_canceled_count,"col-xs-5","col-xs-7" %>
